# swiss-courts-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  README.de.md  README.md  ROADMAP.md  SECURITY.de.md  SECURITY.md  claude_desktop_config.json  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  live.yml  publish.yml  security.yml
audits/2026-05-29T131510-Z-swiss-courts-mcp/: applicability.json  audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-29T131510-Z-swiss-courts-mcp/findings/: ARCH-003-not-found-anti-pattern-heuristiken-statt.md  ARCH-008-drei-primitive-nutzen-tools-resources-un.md  ARCH-011-standardisierte-repo-struktur-tools-spli.md  ARCH-012-protocolversion-pinning-sdk-update-diszi.md  CH-004-ogd-ch-lizenz-compliance-attribution.md  OBS-001-protocol-vs-execution-errors-korrekte-tr.md  OBS-002-mask-error-details-keine-internen-except.md  OBS-003-structured-logging-mit-severity-stufen.md  OPS-001-test-strategie-http-mocking-live-tests-p.md  OPS-003-phasenarchitektur-explizit-deklarieren.md  SCALE-002-stateful-load-balancing-f-r-streamable-h.md  SDK-001-fastmcp-lifespan-connection-reuse.md  SDK-002-strukturierte-tool-returns-response-enve.md  SDK-003-context-injection-f-r-progress-logging.md  SDK-004-cors-mcp-session-id-exposure-bei-http.md  SEC-005-dns-rebinding-prevention-dns-pinning.md  SEC-007-container-sandboxing-f-r-http-cloud-modu.md  SEC-009-session-auth-user-id-session-id-bindung-.md  SEC-016-0-0-0-0-binding-prevention-neighborjack.md  SEC-021-egress-allow-list-code-und-network-layer.md
audits/2026-05-29T135800-Z-swiss-courts-mcp/: audit-meta.json  audit-report.md  profile.json  summary.json  verification-results.json
audits/2026-05-29T135800-Z-swiss-courts-mcp/findings/: SDK-002-strukturierte-tool-returns-residual.md
audits/2026-05-29T191910-Z-swiss-courts-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
docs/: network-egress.md  secret-management.md
docs/adr/: 0001-http-auth.md
src/swiss_courts_mcp/: __init__.py  __main__.py  api_client.py  auth.py  config.py  logging_config.py  models.py  server.py
tests/: conftest.py  test_api_client.py  test_factory.py  test_protocol.py  test_security.py  test_server.py  test_tools.py  test_version.py
