[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "swiss-courts-mcp"
version     = "0.2.0"
description = "MCP Server for Swiss court decisions — Federal Supreme Court, Federal Administrative Court, Federal Criminal Court + 26 cantonal courts via entscheidsuche.ch"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"
authors     = [{ name = "Hayal Oezkan" }]

keywords = [
    "mcp", "model-context-protocol", "swiss-open-data",
    "court-decisions", "entscheidsuche", "bundesgericht",
    "swiss-law", "rechtsprechung", "jurisprudence",
    "claude", "llm",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "mcp[cli]>=1.27.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
# HTTP-/Cloud-Transport mit Bearer-Token-Auth (SEC-009).
http = [
    "pyjwt[crypto]>=2.13.0",
    "uvicorn>=0.48.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.15",
    "pyjwt[crypto]>=2.13.0",
]

[project.scripts]
swiss-courts-mcp = "swiss_courts_mcp.server:mcp.run"

[project.urls]
"mcp-name" = "io.github.malkreide/swiss-courts-mcp"
Homepage       = "https://github.com/malkreide/swiss-courts-mcp"
Repository     = "https://github.com/malkreide/swiss-courts-mcp"
Issues         = "https://github.com/malkreide/swiss-courts-mcp/issues"
"Data Source"  = "https://entscheidsuche.ch"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_courts_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
markers      = [
    "live: live API tests (skipped in CI by default)",
]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
